--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,11 +1,18 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "sumitup app backend service"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi[standard]>=0.115.12",
+    "google-api-python-client>=2.172.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
     "google-genai>=1.19.0",
     "motor>=3.7.1",
+    "pydantic>=2.11.5",
+    "pydantic-settings>=2.9.1",
+    "uvicorn>=0.34.3",
 ]
