--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "sumitup app backend service"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bs4>=0.0.2",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.115.12",
     "google-api-python-client>=2.172.0",
@@ -14,5 +15,6 @@ dependencies = [
     "motor>=3.7.1",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
+    "requests>=2.32.3",
     "uvicorn>=0.34.3",
 ]
