--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "motor>=3.7.1",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
+    "pymongo>=4.13.2",
     "requests>=2.32.3",
     "uvicorn>=0.34.3",
 ]
