--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,5 +19,6 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "pymongo>=4.13.2",
     "requests>=2.32.3",
+    "tenacity>=8.2.0",
     "uvicorn>=0.34.3",
 ]
